--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,13 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.gallery li:not(:last-child) {
+  margin-right: 30px;
+}
